--- a/common/pom.xml
+++ b/common/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.shaw</groupId>
-        <artifactId>moment</artifactId>
+        <artifactId>springboot</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
